fixed jump marks of sections (header wasnt visible) fixes #134

--- a/assets/scss/templates/_navigation.scss
+++ b/assets/scss/templates/_navigation.scss
@@ -30,3 +30,11 @@
 .navbar-dark .navbar-nav .nav-link{
   color: $primary-color;
 }
+
+.jump-mark {
+  height: 0;
+  width: 0;
+  opacity: 0;
+  position: relative;
+  top: -160px;
+}
